--- a/app/src/main/res/layout/fragment_fridge.xml
+++ b/app/src/main/res/layout/fragment_fridge.xml
@@ -1,19 +1,19 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                xmlns:app="http://schemas.android.com/apk/res-auto"
-                xmlns:fab="http://schemas.android.com/apk/res-auto"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:paddingBottom="@dimen/activity_vertical_margin"
-                android:paddingLeft="@dimen/activity_horizontal_margin"
-                android:paddingRight="@dimen/activity_horizontal_margin"
-                android:paddingTop="@dimen/activity_vertical_margin">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:fab="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin">
 
     <!-- A RecyclerView with some commonly used attributes -->
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycler_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:scrollbars="vertical"/>
+        android:scrollbars="vertical" />
 
     <LinearLayout
         android:id="@android:id/empty"
@@ -32,7 +32,7 @@
             android:layout_marginTop="@dimen/activity_vertical_margin"
             android:adjustViewBounds="true"
             android:contentDescription="@string/app_name"
-            android:src="@drawable/empty_fridge"/>
+            android:src="@drawable/empty_fridge" />
 
         <com.app.afridge.views.AdvancedTextView
             android:layout_width="match_parent"
@@ -44,7 +44,7 @@
             android:text="@string/hint_no_items"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:textColor="@color/text_secondary"
-            app:customFont="@string/font_light"/>
+            app:customFont="@string/font_light" />
     </LinearLayout>
 
     <com.melnykov.fab.FloatingActionButton
@@ -55,17 +55,18 @@
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
         android:layout_margin="@dimen/activity_vertical_margin"
+        android:elevation="4dp"
         android:src="@drawable/ic_add"
         fab:fab_colorNormal="@color/accent"
         fab:fab_colorPressed="@color/accent_material_dark"
         fab:fab_colorRipple="@color/accent_material_light"
-        fab:fab_type="normal"/>
+        fab:fab_type="normal" />
     <!--android:tag="#8bc34a"-->
 
     <View
         android:id="@+id/height_hack"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_alignParentBottom="true"/>
+        android:layout_alignParentBottom="true" />
 
 </RelativeLayout>
