--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -15,43 +15,57 @@
 -->
 <resources>
     <declare-styleable name="AdvancedTextView">
-        <attr name="customFont" format="string"/>
+        <attr name="customFont" format="string" />
     </declare-styleable>
     <declare-styleable name="FancyCoverFlow">
-        <attr name="unselectedAlpha" format="float"/>
-        <attr name="unselectedSaturation" format="float"/>
-        <attr name="unselectedScale" format="float"/>
-        <attr name="maxRotation" format="integer"/>
-        <attr name="scaleDownGravity" format="float"/>
+        <attr name="unselectedAlpha" format="float" />
+        <attr name="unselectedSaturation" format="float" />
+        <attr name="unselectedScale" format="float" />
+        <attr name="maxRotation" format="integer" />
+        <attr name="scaleDownGravity" format="float" />
         <attr name="actionDistance" format="integer">
-            <enum name="auto" value="2147483647"/>
+            <enum name="auto" value="2147483647" />
         </attr>
     </declare-styleable>
     <declare-styleable name="JazzyViewPager">
         <attr name="jazzystyle">
-            <enum name="standard" value="0"/>
-            <enum name="tablet" value="1"/>
-            <enum name="cubein" value="2"/>
-            <enum name="cubeout" value="3"/>
-            <enum name="flipvertical" value="4"/>
-            <enum name="fliphorizontal" value="5"/>
-            <enum name="stack" value="6"/>
-            <enum name="zoomin" value="7"/>
-            <enum name="zoomout" value="8"/>
-            <enum name="rotateup" value="9"/>
-            <enum name="rotatedown" value="10"/>
-            <enum name="accordion" value="11"/>
+            <enum name="standard" value="0" />
+            <enum name="tablet" value="1" />
+            <enum name="cubein" value="2" />
+            <enum name="cubeout" value="3" />
+            <enum name="flipvertical" value="4" />
+            <enum name="fliphorizontal" value="5" />
+            <enum name="stack" value="6" />
+            <enum name="zoomin" value="7" />
+            <enum name="zoomout" value="8" />
+            <enum name="rotateup" value="9" />
+            <enum name="rotatedown" value="10" />
+            <enum name="accordion" value="11" />
         </attr>
-        <attr name="fadeEnabled" format="boolean"/>
-        <attr name="outlineEnabled" format="boolean"/>
-        <attr name="outlineColor" format="color|reference"/>
+        <attr name="fadeEnabled" format="boolean" />
+        <attr name="outlineEnabled" format="boolean" />
+        <attr name="outlineColor" format="color|reference" />
     </declare-styleable>
     <declare-styleable name="slideswitch">
-        <attr name="themeColor" format="color"/>
-        <attr name="isOpen" format="boolean"/>
+        <attr name="themeColor" format="color" />
+        <attr name="isOpen" format="boolean" />
         <attr name="shape">
-            <enum name="rect" value="1"/>
-            <enum name="circle" value="2"/>
+            <enum name="rect" value="1" />
+            <enum name="circle" value="2" />
         </attr>
+    </declare-styleable>
+    <declare-styleable name="MaterialRippleLayout">
+        <attr name="mrl_rippleColor" format="color" localization="suggested" />
+        <attr name="mrl_rippleDimension" format="dimension" localization="suggested" />
+        <attr name="mrl_rippleOverlay" format="boolean" localization="suggested" />
+        <attr name="mrl_rippleAlpha" format="float" localization="suggested" />
+        <attr name="mrl_rippleDuration" format="integer" localization="suggested" />
+        <attr name="mrl_rippleFadeDuration" format="integer" localization="suggested" />
+        <attr name="mrl_rippleHover" format="boolean" localization="suggested" />
+        <attr name="mrl_rippleBackground" format="color" localization="suggested" />
+        <attr name="mrl_rippleDelayClick" format="boolean" localization="suggested" />
+        <attr name="mrl_ripplePersistent" format="boolean" localization="suggested" />
+        <attr name="mrl_rippleInAdapter" format="boolean" localization="suggested" />
+        <attr name="mrl_rippleRoundedCorners" format="dimension" localization="suggested" />
     </declare-styleable>
 </resources>
