--- a/app/src/main/res/layout/item_fridge.xml
+++ b/app/src/main/res/layout/item_fridge.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView android:id="@+id/card_view"
+<android.support.v7.widget.CardView
+    android:id="@+id/card_view"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     xmlns:font="http://schemas.android.com/apk/res-auto"
@@ -22,7 +23,10 @@
             android:layout_width="@dimen/grid_image_size"
             android:layout_height="@dimen/grid_image_size"
             android:layout_centerHorizontal="true"
-            android:layout_margin="@dimen/padding_normal"
+            android:layout_marginBottom="@dimen/padding_normal"
+            android:layout_marginEnd="@dimen/padding_normal"
+            android:layout_marginStart="@dimen/padding_normal"
+            android:layout_marginTop="@dimen/activity_vertical_margin"
             android:adjustViewBounds="true"
             android:contentDescription="@string/app_name"
             android:transitionName="@string/shared_image_transition" />
@@ -34,9 +38,23 @@
             android:layout_below="@+id/image_item"
             android:layout_marginLeft="@dimen/padding_normal"
             android:layout_marginRight="@dimen/padding_normal"
-            android:textColor="@color/text_primary"
+            android:textColor="@color/text_secondary"
             android:textSize="@dimen/text_action_size"
             android:transitionName="@string/shared_name_transition"
+            font:customFont="@string/font_light" />
+
+        <com.app.afridge.views.AdvancedTextView
+            android:id="@+id/text_quantity"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/text_name"
+            android:layout_marginLeft="@dimen/padding_normal"
+            android:layout_marginRight="@dimen/padding_normal"
+            android:drawableLeft="@drawable/ic_scale"
+            android:drawableStart="@drawable/ic_scale"
+            android:gravity="center_vertical"
+            android:textColor="@color/text_primary"
+            android:textSize="@dimen/text_size_medium"
             font:customFont="@string/font_light" />
 
         <ImageView
@@ -54,10 +72,12 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
-            android:layout_below="@id/text_name"
+            android:layout_below="@id/text_quantity"
             android:layout_marginBottom="@dimen/padding_normal"
             android:layout_marginLeft="@dimen/padding_normal"
             android:layout_marginRight="@dimen/padding_normal"
+            android:drawableLeft="@drawable/ic_expiration"
+            android:drawableStart="@drawable/ic_expiration"
             android:textColor="@color/accent"
             android:textSize="@dimen/text_size_medium"
             font:customFont="@string/font_light" />
